--- a/index.html
+++ b/index.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Privacy Policy</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+      line-height: 1.6;
+    }
+    h1 {
+      color: #333;
+      text-align: center;
+    }
+    h2 {
+      margin-top: 40px;
+      color: #444;
+    }
+    p {
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
 <body>
-    This privacy policy describes how your data is collected, used, and protected when you use our Chrome extension (referred to as “the Extension”) designed to automatically remove browsing history related to adult or unwanted websites.
+  <h1>Privacy Policy</h1>
 
-1. Information We Collect
-The Extension does not collect or transmit any personal information to any server or third party. All data used by the Extension is stored locally in your browser and is used solely for the functionality of the Extension.
+  <p>This Chrome extension respects your privacy. This document explains what data we collect, why we collect it, and how it is used.</p>
 
-Specifically:
-Browsing History: Accessed only to identify and delete visits to blocked or flagged websites.
+  <h2>1. History</h2>
+  <p>We use browsing history only to improve the functionality of the extension, such as determining the user’s previous navigation path or restoring state.</p>
 
-Tabs & Sessions: Used to monitor real-time activity and remove browsing history only after the tab or window is closed.
+  <h2>2. Identity</h2>
+  <p>We do not collect personally identifiable information unless explicitly required for authentication with third-party services. In such cases, the data is used solely for session identification and is not stored or shared.</p>
 
-Storage: Used to store user preferences, including custom blocked sites and any removed URLs, locally in your browser.
+  <h2>3. Remote Code</h2>
+  <p>The extension may load remote scripts for update or feature delivery purposes. These scripts are secure, hosted on trusted servers, and are strictly necessary for the extension's functionality.</p>
 
-2. How We Use Your Information
-All information accessed by the Extension is used locally and automatically to:
+  <h2>4. Sessions</h2>
+  <p>Sessions are used to maintain the state of the extension while it's running. This helps in providing a seamless user experience.</p>
 
-Detect visits to blocked or adult content websites.
+  <h2>5. Storage</h2>
+  <p>We use Chrome’s `storage` API to store preferences, settings, or temporary data locally. None of this data is transmitted or shared.</p>
 
-Delete such entries from your browsing history.
+  <h2>6. Tabs</h2>
+  <p>The extension may access tab data to perform its core functions, such as interacting with content on the page or injecting scripts.</p>
 
-Store your preferences like custom sites to block or allow.
+  <h2>7. Web Navigation</h2>
+  <p>Web navigation data is only used to detect when certain pages are loaded, which enables features of the extension relevant to those pages.</p>
 
-We do not send, share, or sell any data to third parties.
+  <h2>8. Data Sharing</h2>
+  <p>We do not sell, rent, or share your data with any third parties.</p>
 
-3. Permissions
-To perform its intended function, the Extension requires the following permissions:
-
-history: To delete visited URLs from browser history.
-
-tabs: To monitor open and updated tabs for unwanted content.
-
-storage: To save user-defined custom site lists and history tracking.
-
-webNavigation: To detect when a site has fully loaded for history evaluation.
-
-sessions: To manage cleanup after tabs or windows are closed.
-
-These permissions are strictly used for functionality and not for tracking.
-
-4. Data Sharing
-We do not share any user data with anyone.
-
-5. Data Security
-Since no personal data is collected or stored externally, there is no risk of exposure through this Extension. All processing happens on your local device.
-
-6. Changes to This Policy
-We may update this privacy policy from time to time. You will be notified of any major changes through the Chrome Web Store listing.
-
+  <h2>9. Contact</h2>
+  <p>If you have any questions about this policy, feel free to contact us at [your-email@example.com]</p>
 
 </body>
 </html>
